Surface Deform modifier results in arbitrary vertices extending away from the object's origin, rather than responding to the target mesh #81988

Closed
opened 2020-10-23 02:20:41 +02:00 by Doug · 6 comments

System Information
Operating system: Windows 10
Graphics card: NVidia GeForce GTX 970

Blender Version
Broken: 2.90
Worked: Never (2.80+)

Applying the Surface Deform modifier yields unexpected results. Attempting to apply this modifier to a low-resolution version of a high-resolution mesh, with said high res mesh as the target, and seemingly arbitrary vertices will seemingly ignore the target mesh in favor of extending away from wherever the Object's Origin happens to be.

Exact steps for others to reproduce the error
See the attached file. It is unclear exactly why the mesh does this or how to reproduce it, but this can be easily reproduced in the attached file by toggling the "Bind" on the SurfaceDeform modifier on the LowResMesh object. Applying a Subdivision modifier before this exacerbates the problem.
bug-example.blend

**System Information** Operating system: Windows 10 Graphics card: NVidia GeForce GTX 970 **Blender Version** Broken: 2.90 Worked: Never (2.80+) Applying the Surface Deform modifier yields unexpected results. Attempting to apply this modifier to a low-resolution version of a high-resolution mesh, with said high res mesh as the target, and seemingly arbitrary vertices will seemingly ignore the target mesh in favor of extending away from wherever the Object's Origin happens to be. **Exact steps for others to reproduce the error** See the attached file. It is unclear exactly why the mesh does this or how to reproduce it, but this can be easily reproduced in the attached file by toggling the "Bind" on the `SurfaceDeform` modifier on the LowResMesh object. Applying a Subdivision modifier before this exacerbates the problem. [bug-example.blend](https://archive.blender.org/developer/F9040348/bug-example.blend)
Author

Added subscriber: @DouglasWBlender

Added subscriber: @DouglasWBlender

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I don't see any topology issues here apart from:

The further a mesh deviates from the target mesh surface, the more likely it is to get undesirable artifacts. This is an inherent characteristic of surface binding in general, so it is recommended to have reasonably well matching meshes, in order to get a good bind.

See https://docs.blender.org/manual/en/dev/modeling/modifiers/deform/surface_deform.html

I am not sure if this applies to geometry or topology, but looking at some use cases it seems to allow quite significant deviations for both.

I don't see any topology issues here apart from: > The further a mesh deviates from the target mesh surface, the more likely it is to get undesirable artifacts. This is an inherent characteristic of surface binding in general, so it is recommended to have reasonably well matching meshes, in order to get a good bind. See https://docs.blender.org/manual/en/dev/modeling/modifiers/deform/surface_deform.html I am not sure if this applies to geometry or topology, but looking at some use cases it seems to allow quite significant deviations for both.

This issue was referenced by fc9f1b1754

This issue was referenced by fc9f1b1754bbafa262f875969f7e1bb2554802a3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-11-03 10:53:17 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81988
No description provided.